--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,12 @@ en:
   new_user: '創建用戶'
   edit_user: '編輯用戶'
 
+  new_tqrdc_group: '創建新TQRDC評分類別' #
+  new_tqrdc_qhead: '創建新題目'
+  new_tqrdc_qline: '創建新題目下拉選單'
+  new_tqrdc_order: '創建新評分主流程'
+  new_tqrdc_order_group: '創建新評分子流程'
+  new_tqrdc_order_line: '輸入評分分數'
 
   attributes:
     user: '用戶'
@@ -59,6 +65,71 @@ en:
     email: '郵箱地址'
     role: '角色'
     username: '用戶名'
+
+    tqrdc/group: '分組'
+    score: '分數'
+    tqrdc/qhead: '題目'
+    group_id: '分組號'
+    remark: '說明'
+    tqrdc/qline: '選項內容'
+    qhead_id: '題目'
+    tqrdc/flow: '流程走向'
+    role: '角色'
+    territory: '廠區'
+    seq: '目前關卡'
+    next_seq: '下一關卡'
+    tqrdc/user: '用戶'
+    email: '電子郵件'
+    password: '密碼'
+    login_ip: '登入IP'
+    supplier_id: '供應商ID'
+    tqrdc/supplier: '供應商主檔'
+    supplier: '供應商'
+    commodity_mgr_id: '責任採購'
+    start period: '評分起始期間'
+    end period: '評分結束期間'
+    tqrdc/order: '評分單主檔'
+    period: '評分月份'
+    total: '總分數'
+    tqrdc/order_group: '評分單分支檔'
+    status: '流程狀態'
+    group: '群組'
+    quality: '品質'
+    cost: '成本'
+    delivery: '交期'
+    responsiveness: '服務'
+    technology: '技術'
+    order: '評分主流程編號'
+    order group: '評分子流程編號'
+    final score: '總分數'
+    u1_score: 'Applicant評分分數'
+    u2_score: 'Supervisor評分'
+    u3_score: 'Reviewer評分'
+    u4_score: 'Approver評分'
+    u1_user: 'Applicant'
+    u2_user: 'Supervisor'
+    u3_user: 'Reviewer'
+    u4_user: 'Approver'
+    u1_qline: 'Applicant選項'
+    u2_qline: 'Supervisor選項'
+    u3_qline: 'Reviewer選項'
+    u4_qline: 'Approver選項'
+    u1_ip: 'Applicant IP'
+    u2_ip: 'Supervisor IP'
+    u3_ip: 'Reviewer IP'
+    u4_ip: 'Approver IP'
+    u1_role: 'Applicant 角色'
+    u2_role: 'Supervisor 角色'
+    u3_role: 'Reviewer 角色'
+    u4_role: 'Approver 角色'
+    u1_comment: 'Applicant簽核意見'
+    u2_comment: 'Supervisor簽核意見'
+    u3_comment: 'Reviewer簽核意見'
+    u4_comment: 'Approver簽核意見'
+    u1_sign_date: 'Applicant簽核日期'
+    u2_qline: 'Supervisor簽核日期'
+    u3_qline: 'Reviewer簽核日期'
+    u4_qline: 'Approver簽核日期'
 
   views:
       pagination:
