--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,9 @@ en:
   new_tqrdc_order_group: '創建新評分子流程'
   new_tqrdc_order_line: '輸入評分分數'
   eval: '評分'
+  submit: '提交'
+  question: '題目'
+  no_reply: '未答'
 
   attributes:
     user: '用戶'
@@ -79,7 +82,7 @@ en:
     tqrdc/flow: '流程走向'
     role: '角色'
     territory: '廠區'
-    seq: '目前關卡'
+    seq: '關卡'
     next_seq: '下一關卡'
     tqrdc/user: '用戶'
     email: '電子郵件'
@@ -104,7 +107,7 @@ en:
     technology: '技術'
     order: '評分主流程編號'
     order group: '評分子流程編號'
-    final score: '總分數'
+    final score: '總分'
     u1_score: 'Applicant評分分數'
     u2_score: 'Supervisor評分'
     u3_score: 'Reviewer評分'
@@ -133,7 +136,7 @@ en:
     u2_qline: 'Supervisor簽核日期'
     u3_qline: 'Reviewer簽核日期'
     u4_qline: 'Approver簽核日期'
-    vname: '供應商名稱'
+    vname: '供應商'
     mtype: '電子/機構分類'
     start_period: '起始年月'
     end_period: '結束年月'
