--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,10 +108,10 @@ en:
     order: '評分主流程編號'
     order group: '評分子流程編號'
     final score: '總分'
-    u1_score: 'Applicant評分分數'
-    u2_score: 'Supervisor評分'
-    u3_score: 'Reviewer評分'
-    u4_score: 'Approver評分'
+    u1_tot: '申請者總評分'
+    u2_tot: '審查者總評分'
+    u3_tot: '審核者分數'
+    u4_tot: '核准者分數'
     u1_user: '申請'
     u2_user: '審查'
     u3_user: '審核'
