--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,7 +79,7 @@ en:
     tqrdc/qhead: '題目'
     group_id: '分組號'
     remark: '備註 '
-    tqrdc/qline: '選項內容'
+    tqrdc/qline: '選項'
     qhead_id: '題目'
     tqrdc/flow: '流程走向'
     role: '角色'
@@ -145,7 +145,7 @@ en:
     end_period: '結束年月'
     commodity_mgr: '責任採購'
     object_name: '名稱'
-    object_id: 'ID'
+    objectid: 'ID'
     job_owner: '擁有者'
     job_params: '參數'
     job_class: '類別'
